--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,13 +60,14 @@ jobs:
       - run: npm pack --dry-run
 
   audit:
-    name: Security Audit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '18'
           cache: 'npm'
       - run: npm ci
-      - run: npm audit --audit-level=moderate
+      - name: Run security audit
+        run: npm audit --audit-level=moderate --production
+        continue-on-error: false
