--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,8 +67,8 @@ jobs:
           node-version: '18'
           cache: 'npm'
       - run: npm ci
-      - name: Run security audit
-        run: npm audit --audit-level=moderate --production
+      - name: Security audit
+        run: npm audit --audit-level=high --production
         continue-on-error: false
 
   platform-tests:
